Added callbacks for handling the data-transfer-flow
Added swagger-ui.